jekyll-templates/template.yaml
---
#The deployment template, containing a custom image
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jekyll-website
  namespace: jekyll
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jekyll-blog
  template:
    metadata:
      labels:
        app: jekyll-blog  
    spec:
      containers:
      - name: website
        image: smoonemans/jekyll-blog:0.0.1
        imagePullPolicy: Always
        ports:
          - containerPort: 80
---
#Loadbalancer for the deployment
---
apiVersion: v1
kind: Service
metadata:
  name: jekyll-service
  namespace: jekyll
spec:
  selector:
    app: jekyll-blog
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
  
---
#Ingress for the blog
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jekyll-ingress
  namespace: jekyll
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: public    
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - manofthemoon.nl
    secretName: example-quickstart-tls # Name of the secret
  rules:
  - host: manofthemoon.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jekyll-service
            port:
              number: 80
